modules/015-admission-policy-engine/charts/constraint-templates/tests/image-pull-policy/allowed.yaml
apiVersion: v1
kind: Pod
metadata:
  name: allowed
  namespace: default
spec:
  containers:
    - name: nginx
      image: nginx
      imagePullPolicy: Always
